@@ -31,6 +31,7 @@ tion.
 suggestion colin_is_a_weiner2610)
 [+] Added The Legend of Zelda: Ocarina of Time (Thanks for the suggestion
 colin_is_a_weiner2610)
+[+] Added Tanuki Sunset (Thanks for the suggestion Sophia)
 
 11/13/2025:
 [+] Added Hollow Knight (Thanks for the suggestion Hudsyn ganey)
